# bevy-game-example

./: Cargo.toml  LICENSE  README.md  run.cmd  run.ps1
.github/workflows/: rust.yml
src/: components.rs  main.rs  stares.rs
src/plugins/: game_plugin.rs  mod.rs
src/systems/: ball.rs  gutters.rs  mod.rs  paddle.rs  setup.rs
src/ui/: menu_ui.rs  mod.rs
