[package]
name = "ppGame"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = {version = "0.17.2",features = ["bevy_remote"]}
# bevy_remote_inspector = "0.1.0"


[profile.release]
opt-level = 3




[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
